# CERTIFY-ED

./: CITATION.cff  CODEBASE_README.md  CODEBASE_SUMMARY.txt  CONTRIBUTING.md  FINAL_DELIVERY_SUMMARY.txt  INSTALL.md  MANIFEST.in  QUICKSTART.txt  README.md  __init__.py  basic_usage.py  bug_fix.txt  certify_ed_production_ready.py  diagonalizer.py  observables.py  pyproject.toml  requirements.txt  run_complete_pipeline.py  setup.py  test_diagonalizer.py  test_hamiltonian.py  test_observable.py  validate_analytic.py  validate_reproducibility.py
draft/: example_tfim.py
draft1/: CODEBASE_README.md  certificates.py  engine.py  hamiltonian.py  setup.py
draft2/: gitignore
